--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,131 +4,67 @@ repos:
     rev: v4.5.0
     hooks:
       - id: trailing-whitespace
-        name: Trim trailing whitespace
       - id: end-of-file-fixer
-        name: Fix end of files
       - id: check-yaml
-        name: Check YAML syntax
       - id: check-json
-        name: Check JSON syntax
       - id: check-added-large-files
-        name: Check for large files
         args: ['--maxkb=1000']
       - id: check-merge-conflict
-        name: Check for merge conflicts
       - id: detect-private-key
-        name: Detect private keys
       - id: check-case-conflict
-        name: Check for case conflicts
       - id: mixed-line-ending
-        name: Check line endings
         args: ['--fix=lf']
-      - id: check-executables-have-shebangs
-        name: Check executables have shebangs
 
-  # Prevent committing to main directly
+  # Prevent committing to main
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.5.0
     hooks:
       - id: no-commit-to-branch
-        name: Don't commit to main branch
-        args: [--branch, main, --branch, master]
+        args: [--branch, main]
 
-  # Secret scanning - CRITICAL for security
+  # Secret scanning
   - repo: https://github.com/Yelp/detect-secrets
     rev: v1.4.0
     hooks:
       - id: detect-secrets
-        name: Detect secrets in code
         args: ['--baseline', '.secrets.baseline']
-        exclude: package-lock.json|yarn.lock|poetry.lock
+        exclude: package-lock.json
 
-  # Python - Black formatter
+  # Python formatting
   - repo: https://github.com/psf/black
     rev: 23.12.1
     hooks:
       - id: black
-        name: Format Python code with Black
         language_version: python3.11
         args: [--line-length=120]
         files: \.py$
 
-  # Python - Flake8 linter
+  # Python linting
   - repo: https://github.com/pycqa/flake8
     rev: 7.0.0
     hooks:
       - id: flake8
-        name: Lint Python code with Flake8
-        args: [
-          --max-line-length=120,
-          --exclude=migrations,
-          --ignore=E203,W503,E501
-        ]
+        args: [--max-line-length=120, --exclude=migrations, --ignore=E203,W503,E501]
         files: \.py$
 
-  # Python - isort for imports
+  # Python imports
   - repo: https://github.com/pycqa/isort
     rev: 5.13.2
     hooks:
       - id: isort
-        name: Sort Python imports
         args: [--profile=black, --line-length=120]
         files: \.py$
 
-  # Python - Security linter (Bandit)
+  # Python security
   - repo: https://github.com/PyCQA/bandit
     rev: 1.7.6
     hooks:
       - id: bandit
-        name: Security check with Bandit
-        args: ['-c', 'pyproject.toml', '-ll', '-r', 'backend/']
+        args: ['-c', 'backend/pyproject.toml', '-ll', '-r', 'backend/']
         additional_dependencies: ['bandit[toml]']
         pass_filenames: false
 
-  # Docker - Hadolint for Dockerfile linting
-  - repo: https://github.com/hadolint/hadolint
-    rev: v2.12.0
-    hooks:
-      - id: hadolint-docker
-        name: Lint Dockerfiles
-        args: [--ignore, DL3008, --ignore, DL3013]
-
-  # JavaScript/TypeScript - Prettier
-  - repo: https://github.com/pre-commit/mirrors-prettier
-    rev: v3.1.0
-    hooks:
-      - id: prettier
-        name: Format JS/TS with Prettier
-        types_or: [javascript, jsx, ts, tsx, json, css, scss, html]
-        args: [--write]
-
-  # JavaScript - ESLint
-  - repo: https://github.com/pre-commit/mirrors-eslint
-    rev: v8.56.0
-    hooks:
-      - id: eslint
-        name: Lint JS/TS with ESLint
-        files: \.(js|jsx|ts|tsx)$
-        types: [file]
-        additional_dependencies:
-          - eslint@8.56.0
-          - eslint-plugin-react@7.33.2
-          - eslint-plugin-react-hooks@4.6.0
-          - '@typescript-eslint/eslint-plugin@6.13.0'
-          - '@typescript-eslint/parser@6.13.0'
-
-  # Markdown linting
-  - repo: https://github.com/igorshubovych/markdownlint-cli
-    rev: v0.38.0
-    hooks:
-      - id: markdownlint
-        name: Lint Markdown files
-        args: [--fix]
-
-# Configuration
 default_language_version:
   python: python3.11
-  node: '18.0.0'
 
 fail_fast: false
-minimum_pre_commit_version: '3.0.0'
