--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -17,20 +17,29 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     netcat-openbsd \
     && rm -rf /var/lib/apt/lists/*
 
+# Create non-root user for security
+RUN groupadd -r django && \
+    useradd -r -g django -d /app -s /sbin/nologin django && \
+    chown -R django:django /app
+
 # Install Python dependencies (separate layer for better caching)
 COPY requirements.txt /app/
 RUN pip install --upgrade pip && \
     pip install --no-cache-dir -r requirements.txt
 
 # Copy project files
-COPY . /app/
+COPY --chown=django:django . /app/
 
 # Copy and set entrypoint script permissions
-COPY entrypoint.sh /app/
+COPY --chown=django:django entrypoint.sh /app/
 RUN chmod +x /app/entrypoint.sh
 
-# Create directories for static and media files
-RUN mkdir -p /app/staticfiles /app/media
+# Create directories for static and media files with proper permissions
+RUN mkdir -p /app/staticfiles /app/media && \
+    chown -R django:django /app/staticfiles /app/media
+
+# Switch to non-root user
+USER django
 
 # Expose port
 EXPOSE 8000
